fix double border menu issue

--- a/style.css
+++ b/style.css
@@ -828,10 +828,10 @@ body { background: #eee; }
 .nav-menu.mobile ul ul { background: rgba(0,0,0,0.03); }
 .nav-menu.mobile ul li .menu-item-wrapper,
 .nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid rgba(0,0,0,0.07); }
-.nav-menu.mobile > div > ul > li:first-child .menu-item-wrapper { border-top: 1px solid rgba(0,0,0,0.07); }
 .nav-menu.mobile ul li a { color: #333; }
 .nav-menu.mobile ul button,
 .nav-menu.mobile ul ul button { border-left: 1px solid rgba(0,0,0,0.07); }
+.nav-menu.mobile > div > ul { border-top: 1px solid rgba(0,0,0,0.07); }
 
 @media only screen and (min-width: 961px) {
 	.nav-menu:not(.mobile) { padding-top: 12px; }
